Fixed alignment of checkboxes in invitation form

--- a/static/css/style.less
+++ b/static/css/style.less
@@ -304,6 +304,10 @@ form {
     }
     label {
         display: block;
+
+        input[type="checkbox"] {
+            vertical-align: middle;
+        }
     }
 }
 
